--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,4 @@
+spring.application.name= Config-Default
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
 eureka.instance.prefer-ip-address=true
